# nitro-tee-attestation

./: Cargo.toml
src/: lib.rs  sig.rs  types.rs
tests/: attestation.hex  test.rs
